# HackDeepWiki

./: .gitignore  Dockerfile  Dockerfile-litellm  Dockerfile-ollama-local  LOCAL_SETUP.es.md  Ollama-instruction.md  PENDIENTE.md  README.md  deepwiki.env.example  deepwiki.sh  deepwiki.spec  docker-compose-litellm.yml  docker-compose.ollama-linux.yml  docker-compose.ollama.yml  docker-compose.yml  freedeepwiki.spec  hackdeepwiki.env.example  hackdeepwiki.sh  hackdeepwiki.spec  package-lock.json  package.json  vitest.config.ts
.github/workflows/: release.yml
api/: README.md  agent_loop.py  api.py  bedrock_client.py  cache_eviction.py  chat_common.py  code_splitter.py  config.py  context_budget.py  data_pipeline.py  data_root.py  exports.py  fanwiki_import.py  main.py  models.py  ollama_patch.py  openai_client.py  openrouter_client.py  prompts.py  provider_streaming.py  pyproject.toml  rag.py  search_tool.py  security.py  simple_chat.py  stream_events.py  websocket_wiki.py  zim_export.py  zim_library.py  zim_reader.py
api/config/: generator.json
api/jobs/: incremental.py  queue.py
api/storage/: __init__.py
api/vuln_scanner/: __init__.py  dep_parser.py  models.py  osv_client.py
api/web_crawler/: crawler.py  orchestrator.py
api/web_vuln_scanner/: checks.py  docker_tools.py  graph_db.py  models.py  orchestrator.py
docker/vulnscan/: Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: deepwiki_config.py  hackdeepwiki_config.py  launcher.py  prepare_assets.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/[owner]/[repo]/: page.tsx
src/app/[owner]/[repo]/slides/: page.tsx
src/app/[owner]/[repo]/workshop/: page.tsx
src/app/api/chat/stream/: route.ts
src/app/api/fanwiki/inspect/: route.ts
src/app/api/fanwiki/repair_links/: route.ts
src/app/api/fanwiki/structure/: route.ts
src/app/api/github/[...path]/: route.ts
src/app/api/github/repository-structure/: route.ts
src/app/api/vuln_cache/: route.ts
src/app/api/vuln_cache/releases/: route.ts
src/app/api/web_vuln_cache/: route.ts
src/app/api/web_vuln_cache/releases/: route.ts
src/app/api/wiki/file_content/: route.ts
src/app/api/zim/drop_dir/: route.ts
src/app/api/zim/rescan/: route.ts
src/app/fanwiki/[id]/: page.tsx
src/app/zim/[id]/: page.tsx
src/components/: Ask.tsx  CodeViewer.tsx  ConfigurationModal.tsx  LanguageSelector.tsx  Markdown.tsx  Mermaid.tsx  ModelSelectionModal.tsx  UserSelector.tsx  WikiTypeSelector.tsx
src/components/vuln/: RescanConfigModal.tsx  ScanReleaseSelector.tsx  VulnDetailDrawer.tsx  VulnGraph2D.tsx  VulnGraph3D.tsx  VulnGraph3DInner.tsx  VulnSection.tsx  WebFindingDetailDrawer.tsx  WebVulnOverview.tsx  WebVulnSection.tsx  types.ts  webTypes.ts
src/components/vuln/config/: colors.ts  graph.ts  sizes.ts
src/messages/: en.json  es.json  fr.json  ja.json  kr.json  pt-br.json  ru.json  vi.json  zh-tw.json  zh.json
src/types/: d3-force-3d.d.ts
src/utils/: codeLanguage.ts  mermaid.test.ts  mermaid.ts  repoWikiHelpers.ts  streamParser.test.ts  streamParser.ts  websocketClient.ts  wikiPageCount.ts
test/: __init__.py  test_deepwiki_config.py  test_hackdeepwiki_config.py  test_ollama_batch.py
tests/: README.md  __init__.py  run_tests.py
tests/integration/: test_full_integration.py
tests/unit/: test_all_embedders.py  test_fanwiki_import.py
