[project]
name = "open-freedeepwiki-api"
version = "1.0.0"
description = "Backend API for FreeDeepWiki, providing smart code analysis and AI-powered documentation generation."
license = {text = "MIT License"}

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Upper-bounded: newer FastAPI/Starlette releases have removed
# `FastAPI.add_websocket_route` (used to register /ws/chat), so an
# unconstrained range can silently break the chat/wiki-generation feature
# whenever the lock file is regenerated.
fastapi = ">=0.95.0,<0.120.0"
uvicorn = { extras = ["standard"], version = ">=0.21.1" }
pydantic = ">=2.0.0"
google-generativeai = ">=0.3.0"
tiktoken = ">=0.5.0"
adalflow = ">=0.1.0"
numpy = ">=1.24.0"
faiss-cpu = ">=1.7.4"
langid = ">=1.1.6"
requests = ">=2.28.0"
jinja2 = ">=3.1.2"
python-dotenv = ">=1.0.0"
openai = ">=1.76.2"
ollama = ">=0.4.8"
aiohttp = ">=3.8.4"
boto3 = ">=1.34.0"
websockets = ">=11.0.3"
azure-identity = ">=1.12.0"
azure-core = ">=1.24.0"
# Upper-bounded to match libzim's own supported Python range (<3.15); without
# this poetry's solver fails outright since the project's own `python = "^3.11"`
# is otherwise unbounded above 3.15.
libzim = { version = ">=3.12.0", python = ">=3.11,<3.15" }

# Website wiki crawler (api.web_crawler): headless-browser fetch + HTML -> Markdown.
playwright = ">=1.40.0"
beautifulsoup4 = ">=4.12.0"
markdownify = ">=0.11.0"

# Website/dependency vuln scanner graph persistence (api.web_vuln_scanner.graph_db).
# Purely optional at runtime (lazy-imported, wrapped in try/except) -- Neo4j
# itself is a separate opt-in Docker service (docker/vulnscan/docker-compose.yml),
# never required for the scan to complete.
neo4j = ">=5.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
