[project]
name = "open-hackdeepwiki-api"
version = "1.0.0"
description = "Backend API for HackDeepWiki, providing smart code analysis and AI-powered documentation generation."
license = {text = "MIT License"}

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Previously upper-bounded at <0.120.0: newer FastAPI/Starlette releases
# removed `FastAPI.add_websocket_route` (used to register /ws/chat). That
# route is now registered via a `@app.websocket(...)` decorator wrapper
# instead (see api/api.py), which works on every version, so the cap is no
# longer needed -- and had to go: the vulnerable Starlette range this
# project was otherwise stuck on (see api/pyproject.toml's implicit pull via
# fastapi's own dependency bound) only gets fully patched by Starlette
# 1.3.1+, which no fastapi <0.120 release accepts.
fastapi = ">=0.119.0"
uvicorn = { extras = ["standard"], version = ">=0.21.1" }
pydantic = ">=2.0.0"
google-generativeai = ">=0.3.0"
tiktoken = ">=0.5.0"
adalflow = ">=0.1.0"
numpy = ">=1.24.0"
faiss-cpu = ">=1.7.4"
langid = ">=1.1.6"
requests = ">=2.33.0"
jinja2 = ">=3.1.6"
python-dotenv = ">=1.2.2"
openai = ">=1.76.2"
ollama = ">=0.4.8"
aiohttp = ">=3.13.3"
boto3 = ">=1.34.0"
websockets = ">=11.0.3"
azure-identity = ">=1.12.0"
azure-core = ">=1.38.0"
# Not imported directly -- these pin known-vulnerable *transitive*
# dependencies (of requests/google-generativeai/boto3/azure-identity/pytest)
# up to a patched version. Without an explicit floor here, poetry's resolver
# is free to satisfy the graph with an older, still-technically-compatible
# version that happens to carry a known CVE (verified via `pip-audit
# --local` against a scratch install of this lock file -- these five showed
# up with real, fixable advisories even though nothing in this project
# imports them directly).
urllib3 = ">=2.7.0"
idna = ">=3.15"
protobuf = ">=5.29.6"
pyasn1 = ">=0.6.4"
pygments = ">=2.20.0"
pyjwt = ">=2.13.0"
# Upper-bounded to match libzim's own supported Python range (<3.15); without
# this poetry's solver fails outright since the project's own `python = "^3.11"`
# is otherwise unbounded above 3.15.
libzim = { version = ">=3.12.0", python = ">=3.11,<3.15" }

# Website wiki crawler (api.web_crawler): headless-browser fetch + HTML -> Markdown.
playwright = ">=1.40.0"
beautifulsoup4 = ">=4.12.0"
markdownify = ">=0.11.0"

# Website/dependency vuln scanner graph persistence (api.web_vuln_scanner.graph_db).
# Purely optional at runtime (lazy-imported, wrapped in try/except) -- Neo4j
# itself is a separate opt-in Docker service (docker/vulnscan/docker-compose.yml),
# never required for the scan to complete.
neo4j = ">=5.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3"
